# CppsArchiver

./: .gitignore  CMakeLists.txt  CppsArchiver.sln  LICENSE  README.md
.github/workflows/: ci.yml
ArchiverImplementation/: ArchiverImplementation.vcxproj  ArchiverImplementation.vcxproj.filters  CMakeLists.txt
ArchiverImplementation/include/api/: c_api.h  defines.h
ArchiverImplementation/include/functionality/: Decoder.h  decode.h
ArchiverImplementation/include/interfaces/: IDecoder.h  IEncoder.h
ArchiverImplementation/include/zip/: Zip.h  ZipStruct.h
ArchiverImplementation/source/api/: c_api.cpp
ArchiverImplementation/source/zip/: ZIp.cpp  Zip.cpp
CppsArchiverAPI/: CMakeLists.txt
CppsArchiverAPI/source/: CppsArchiverAPI.cs
CppsArchiverAPI/source/FileClustering/: FileManager.cs
CppsArchiverAPI/source/FileClustering/FileInfo/: FileHeader.cs  Headers.cs
CppsArchiverAPI/source/FileManager/: FileManager.cs
CppsArchiverAPI/source/FileManager/FileInfo/: Headers.cs
CppsArchiverAPI/source/LibraryImport/: BaseProcessHandler.cs  CppArchiverAPI.cs  ProcessHandler.cs
CppsArchiverAPI/source/LibraryImport/DerivedProcessHandlers/: UnzipHandler.cs  ZipHandler.cs
CppsArchiverCLI/: CMakeLists.txt  CppsArchiverCLI.csproj
CppsArchiverCLI/Properties/: launchSettings.json
CppsArchiverCLI/source/: Program.cs
scripts/: android_build.sh  build.bat  build.sh
